--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "6.1.9",
+    "@shimeuisuk/simicocobab": "0.1.2",
     "react": "18.2.0",
     "react-native": "0.73.1",
-    "react-query": "^3.39.3",
-    "recoil": "^0.7.7"
+    "react-native-swiper": "1.6.0",
+    "react-query": "3.39.3",
+    "recoil": "0.7.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "^0.73.18",
-    "@react-native/eslint-config": "^0.73.1",
-    "@react-native/metro-config": "^0.73.2",
-    "@react-native/typescript-config": "^0.73.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "@babel/core": "7.20.0",
+    "@babel/preset-env": "7.20.0",
+    "@babel/runtime": "7.20.0",
+    "@react-native/babel-preset": "0.73.18",
+    "@react-native/eslint-config": "0.73.1",
+    "@react-native/metro-config": "0.73.2",
+    "@react-native/typescript-config": "0.73.1",
+    "@types/react": "18.2.6",
+    "@types/react-test-renderer": "18.0.0",
+    "babel-jest": "29.6.3",
+    "eslint": "8.19.0",
+    "jest": "29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
