--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "@shimeuisuk/simicocobab": "0.1.2",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-date-picker": "4.3.5",
     "react-native-swiper": "1.6.0",
+    "react-native-vector-icons": "10.0.3",
     "react-query": "3.39.3",
     "recoil": "0.7.7"
   },
   "devDependencies": {
-    "@babel/core": "7.20.0",
-    "@babel/preset-env": "7.20.0",
+    "@babel/core": "7.20.2",
+    "@babel/preset-env": "7.20.2",
     "@babel/runtime": "7.20.0",
     "@react-native/babel-preset": "0.73.18",
     "@react-native/eslint-config": "0.73.1",
     "@react-native/metro-config": "0.73.2",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "18.2.6",
+    "@types/react-native-vector-icons": "6.4.18",
     "@types/react-test-renderer": "18.0.0",
     "babel-jest": "29.6.3",
     "eslint": "8.19.0",
@@ -37,5 +40,10 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "graphql": "^16.5.0"
   }
 }
