--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-seoul/kakao-login": "^5.3.1",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.18",
+    "@react-native-seoul/kakao-login": "5.3.1",
+    "@react-navigation/native": "6.1.10",
+    "@react-navigation/native-stack": "6.9.18",
     "@shimeuisuk/simicocobab": "0.1.2",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-date-picker": "4.3.5",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
+    "react-native-safe-area-context": "4.9.0",
+    "react-native-screens": "3.29.0",
     "react-native-swiper": "1.6.0",
     "react-native-vector-icons": "10.0.3",
     "react-query": "3.39.3",
